--- a/sales_prediction_using_python.ipynb
+++ b/sales_prediction_using_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNuk3txLeFwEy0Nq6fG4Sfu",
+      "authorship_tag": "ABX9TyP1lx8H7IiUU8surUV6WVW+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "C4HZx7Gndbrh"
       },
@@ -55,7 +55,7 @@
       "metadata": {
         "id": "EIYz9WynrvDc"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -71,7 +71,7 @@
         "id": "2lk_T41nr-Kb",
         "outputId": "b6448df9-6d04-4129-86a7-17ff311d5b40"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -385,7 +385,7 @@
         "id": "HBuV7gV6sBxm",
         "outputId": "459f29eb-8b95-49be-a318-c10383640df4"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -409,7 +409,7 @@
         "id": "pbzidoOvsRN8",
         "outputId": "47220756-641f-4de7-dbc9-939d5f264c56"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -443,7 +443,7 @@
         "id": "L0GfSIk6sVCO",
         "outputId": "6593042d-f70f-4c88-f55d-459fda3029f2"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -787,7 +787,7 @@
         "id": "g7WbCXGgsc7n",
         "outputId": "b2199a9f-46eb-4bd3-b00e-d1658ff337da"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -827,7 +827,7 @@
         "id": "yowQkSinuyhn",
         "outputId": "94f06363-63c3-496a-d33c-1546368f601f"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -847,6 +847,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Data Cleaning\n"
+      ],
+      "metadata": {
+        "id": "VOfs34Sv6PGd"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "df.isnull().sum()*100/len(df)"
@@ -859,7 +868,7 @@
         "id": "KGP-pmJRvIbv",
         "outputId": "cb0594ad-cccd-41e9-9d7e-d144afdb4129"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -921,6 +930,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Visualization"
+      ],
+      "metadata": {
+        "id": "k6msGqBr6Vpv"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "fig,axs = plt.subplots(2,2,figsize=(10,10))\n",
@@ -937,7 +955,7 @@
         "id": "A5z2clSTvpHJ",
         "outputId": "c6e5e643-d8cd-49ab-ca66-a942463fe61b"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -974,7 +992,7 @@
         "id": "JMbK2fLLwCxh",
         "outputId": "1e4440e6-c852-42a2-ebe6-f1043e749ce9"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1013,7 +1031,7 @@
         "id": "HlTX5FErwVW2",
         "outputId": "58863224-3411-405a-88b4-1bc8093a904a"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1036,7 +1054,7 @@
       "metadata": {
         "id": "Ke6R7_7Wwf0q"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1049,8 +1067,17 @@
       "metadata": {
         "id": "4kDc0BEiwyDq"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Preprocessing"
+      ],
+      "metadata": {
+        "id": "sjgH2q3l6dLN"
+      }
     },
     {
       "cell_type": "code",
@@ -1065,7 +1092,7 @@
         "id": "xDnOHWpDxAw0",
         "outputId": "9ca15aba-89b2-4a87-ab01-6cb3d37ba2ab"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1144,7 +1171,7 @@
         "id": "oh6JWtcdxJT2",
         "outputId": "c8b445c9-e2f6-417b-ed0f-dc7cf0468344"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1225,7 +1252,7 @@
         "id": "MmGHAyoAxTVx",
         "outputId": "045d5228-3927-475c-ffce-a32bf1679c0e"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1288,7 +1315,7 @@
         "id": "E0o6j82vxhSh",
         "outputId": "1f9ccd1d-c662-4822-ed2c-3893cbbcf0fe"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1338,7 +1365,7 @@
         "id": "0NvD5VtNxn_d",
         "outputId": "034c6671-8f0a-4c3b-d782-3a71f8032717"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
